--- a/styles/Battle.css
+++ b/styles/Battle.css
@@ -36,3 +36,43 @@
   top: -11px;
   right: 7px;
 }
+
+/*Animations*/
+@keyframes battle-damage-blink {
+  to {
+    visibility: hidden;
+  }
+}
+.battle-damage-blink {
+  animation: battle-damage-blink 0.2s steps(2, start) infinite;
+}
+
+@keyframes battle-spin-right {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate3d(100%, -25%, 0) rotate(45deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+.battle-spin-right {
+  animation: battle-spin-right 0.8s;
+}
+
+@keyframes battle-spin-left {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate3d(-100%, 25%, 0) rotate(-45deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+.battle-spin-left {
+  animation: battle-spin-left 0.8s;
+}
